--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,4 +60,5 @@ const {
   </body>
   <script src="/assets/js/script.js" type="module"></script>
   <script is:inline src="/assets/js/forms.js"></script>
+  <slot name="scripts"/>
 </html>
