--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -251,6 +251,10 @@
         &--main {
           text-transform: capitalize;
 
+          &-not-capitalize {
+            text-transform: none;
+          }
+
           //Reset the br tag
           br {
             display: none;
