🐛 Add new hero stamp assets

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -11,7 +11,7 @@ const internalNavLinks = [
 ---
 
 <Layout title="ALPD Academy" pageClass="alpd__academy" showISI={false}>
-  <CommonHeroPage title="alpd academy" classes="alpd-academy-page__hero">
+  <CommonHeroPage title="alp academy" classes="alpd-academy-page__hero">
     <picture slot="image-hero" data-image-hero>
       <source
         srcset="/assets/images/alpd-academy/alpd-academy-hero-desktop.png"
