--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -931,6 +931,10 @@
             @include flex-gap(1rem);
             font-weight: 400;
             padding-top: 0.5rem;
+
+            p {
+                font-weight: 400;
+            }
         }
 
         &--img {
@@ -958,6 +962,7 @@
                 font-size: .75rem;
                 font-weight: 400;
                 line-height: .975rem;
+                margin-bottom: 0.75rem;
 
                 @media screen and (max-width: 768px) {
                     &:not(:last-of-type) {
