fix: :lipstick: Update of texts, styles and asset for Anna's patient case file
Update of texts, styles and asset for Anna's patient case file

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -539,16 +539,16 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 alt=""
                                             />
                                         </picture>
-                                        <div class="patient">
+                                        <div class="patient patient--anna-rad patient--anna-rad-1">
                                             <p class="patient--delay-color">
-                                                Delayed eruption of permanent
-                                                teeth
+                                                Delayed eruption of permanent teeth
                                             </p>
-                                            <small
-                                                >Reproduced with permission from
-                                                Kiselnikova L, et al. Clin Case
-                                                Rep. 2020;8(5):911-918.</small
-                                            >
+                                            <p>
+                                                Radiograph showing enlarged pulp chambers and shape abnormalities.
+                                            </p>
+                                            <small>
+                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                                            </small>
                                         </div>
                                     </div>
                                 </PinchToZoom>
@@ -572,7 +572,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 alt=""
                                             />
                                         </picture>
-                                        <div class="patient">
+                                        <div class="patient patient--anna-rad patient--anna-rad-2">
                                             <p>
                                                 Early loss of baby teeth with <br
                                                 /> root intact
