Update Hero Stamp styles

--- a/src/styles/components/_common-page-hero.scss
+++ b/src/styles/components/_common-page-hero.scss
@@ -33,7 +33,7 @@
 
     .common-page-hero__title {
         border: 10px solid transparent;
-        padding: .85rem .5rem .5rem .5rem;
+        padding: 0.5rem;
         position: absolute;
 
         border-image: url("/assets/images/common-hero/hero-title-frame.png") 19 round;
