--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -707,6 +707,16 @@
         }
     }
 
+    .patients.mobile--version {
+        .patient {
+            &--hannah-mobile {
+                .patient--main-not-capitalize {
+                    display: none;
+                }
+            }
+        }
+    }
+
     #patient-id-1 {
 
         .profile__pic {
