feat: :construction: Add js to open the correct case file on modal desktop
Add a data-attribute to buttons and add a data-attribute to desktop modal to show the correct patient when open the modal if is selected by an specific button

--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -3,7 +3,7 @@ import PinchToZoom from "../Pinch-to-zoom.astro";
 import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
 ---
 
-<div id="case-files-modal-template-desktop" style="display: none;">
+<div id="case-files-modal-template-desktop" data-active-tab="1" style="display: none;">
     <div class="case__files_modal --desktop" id="case-files-modal--desktop">
         <button data-fancybox-close class="case__files_modal_close-button"
             >×</button
@@ -1095,8 +1095,26 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                         height: "auto",
                         mainClass: "case-files-modal--destkop",
                         dragToClose: false,
+                        on: {
+                            reveal: this.goToTab,
+                            destroy: this.resetTabs
+                        }
                     }
                 );
+            }
+
+            goToTab() {
+                const caseFileDesktopModal = document.querySelector('#case-files-modal-template-desktop')
+                const dataActiveTab = caseFileDesktopModal.dataset.activeTab
+                const newActiveTab = document.querySelector(`#case-link-to-panel-${dataActiveTab}`)
+                if(newActiveTab) {
+                    newActiveTab.click()
+                }
+            }
+
+            resetTabs() {
+                const caseFileDesktopModal = document.querySelector('#case-files-modal-template-desktop')
+                caseFileDesktopModal.dataset.activeTab = 1
             }
 
             close() {
@@ -1112,8 +1130,13 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
             const customTabLinks = document.querySelectorAll("[data-tab-id]");
 
             buttons.forEach((button) => {
-                button.addEventListener("click", () => {
+                button.addEventListener("click", (event) => {
                     event.preventDefault();
+                    const caseFileDesktopModal = document.querySelector('#case-files-modal-template-desktop')
+                    let dataTab = event.target.dataset.caseFileTab
+                    if(dataTab) {
+                        caseFileDesktopModal.dataset.activeTab = dataTab
+                    }
                     openCaseFilesModal.open();
 
                     const mainTablist: HTMLListElement = document.querySelector(
